diplomado-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplomado-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx #cambia apartir del Ingresscontroller que tengan.
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /example(/|$)(.*)
        backend:
          service:
            name: diplomado-example
            port:
              number: 80
